example/lib/src/arbs/errors/app_ca.arb
{
  "@@locale": "ca",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "S'ha produït un error",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "S'ha produït un error inesperat",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Informe de bug enviat amb èxit.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}